# server/routes.js
@@ -5,5 +5,5 @@ import tripsRouter from './api/controllers/trips/router';
 export default function routes(app) {
   app.use('/api/v1/examples', examplesRouter);
   app.use('/api/v1/stations', stationsRouter);
-  app.use('/api/v1/trips', tripsRouter);
+  app.use('/api/v1/trip-search', tripsRouter);
 }
